# my-simple-todo

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  pnpm-lock.yaml  repositories.bzl
frontendreact/public/: index.html
frontendreact/src/: App.js
golangtodo/: BUILD.bazel  SPEC.md  main.go
golangtodo/internal/: BUILD.bazel  application_layer.go  data_layer.go  errors.go
golangtodo/model/: BUILD.bazel  list.go  list_entry.go
golangtodo/server/: BUILD.bazel  server.go
golangtodo/server/templates/: list.tmpl
