load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = [
        "application_layer.go",
        "data_layer.go",
        "errors.go",
    ],
    importpath = "mytodo/golangtodo/internal",
    visibility = ["//golangtodo:__subpackages__"],
    deps = [
        "//golangtodo/model",
        "@io_gorm_driver_sqlite//:sqlite",
        "@io_gorm_gorm//:gorm",
    ],
)
