load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "mytodo/golangtodo/server",
    visibility = ["//visibility:public"],
    deps = [
        "//golangtodo/internal",
        "//golangtodo/model",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
